--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/CSS/style.css" />
+    <link rel="stylesheet" href="CSS/style.css" />
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
     <title>BMI || Calculator</title>
   </head>
@@ -41,7 +41,7 @@
         
           <button type="submit" class="p-2 bg-[#90EE90] text-2xl font-semibold rounded-lg tracking-wide ">Calculate</button>
         </form>
-        \0
+
       </div>
     </main>
     <script src="/JS/script.js"></script>
