--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
 
       </div>
     </main>
-    <script src="/JS/script.js"></script>
+    <script src="JS/script.js"></script>
   </body>
 </html>
